<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin"
                android:elevation="3dp"
                card_view:cardCornerRadius="@dimen/card_album_radius"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_sensor_title"
                        android:drawableStart="@drawable/ic_environmental_sensor"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/room_sensor_temperature"
                            android:drawableStart="@drawable/ic_thermometer"
                            android:drawablePadding="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/room_sensor_temperature_value"
                            android:text="@string/room_sensor_temperature_default"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/room_sensor_humidity"
                            android:drawableStart="@drawable/ic_humidity"
                            android:drawablePadding="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/room_sensor_humidity_value"
                            android:text="@string/room_sensor_humidity_default"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/room_sensor_presence"
                            android:drawableStart="@drawable/ic_presence"
                            android:drawablePadding="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/room_sensor_presence_value"
                            android:text="@string/room_sensor_presence_default"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/room_sensor_battery"
                            android:drawableStart="@drawable/ic_battery"
                            android:drawablePadding="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/room_sensor_battery_value"
                            android:text="@string/room_sensor_battery_default"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/room_sensor_firmware"
                            android:drawableStart="@drawable/ic_firmware"
                            android:drawablePadding="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/room_sensor_firmware_value"
                            android:text="@string/room_sensor_firmware_default"/>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin"
                android:elevation="3dp"
                card_view:cardCornerRadius="@dimen/card_album_radius"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/window_sensor_title"
                        android:drawableStart="@drawable/ic_window"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:orientation="horizontal"-->
                        <!--android:paddingStart="30dp"-->
                        <!--android:paddingEnd="30dp">-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/window_sensor_status"-->
                            <!--android:drawableStart="@drawable/ic_window"-->
                            <!--android:drawablePadding="5dp"-->
                            <!--android:paddingStart="10dp"-->
                            <!--android:paddingEnd="10dp"-->
                            <!--android:paddingTop="10dp"-->
                            <!--android:paddingBottom="10dp"-->
                            <!--android:gravity="center"-->
                            <!--android:textStyle="bold"/>-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:id="@+id/window_sensor_status_value"-->
                            <!--android:text="@string/window_sensor_status_default"/>-->

                    <!--</LinearLayout>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/window_sensor_battery"
                            android:drawableStart="@drawable/ic_battery"
                            android:drawablePadding="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/window_sensor_battery_value"
                            android:text="@string/window_sensor_battery_default"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/window_sensor_firmware"
                            android:drawableStart="@drawable/ic_firmware"
                            android:drawablePadding="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/window_sensor_firmware_value"
                            android:text="@string/window_sensor_firmware_default"/>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin"
                android:elevation="3dp"
                card_view:cardCornerRadius="@dimen/card_album_radius"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/air_conditioner_title"
                        android:drawableStart="@drawable/ic_air_conditioner"
                        android:drawablePadding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <Switch
                        android:id="@+id/ac_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/air_condition_status"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>